--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
     "version": "0.0.0",
     "private": true,
     "scripts": {
-        "start": "node ./bin/www",
-        "postinstall": "bower install"
+        "start": "node ./bin/www"
     },
     "dependencies": {
         "angular": "^1.6.4",
@@ -14,7 +13,6 @@
         "angular-ui-router": "^0.3.2",
         "body-parser": "~1.16.0",
         "cookie-parser": "~1.4.3",
-        "bower": "^1.7.2",
         "debug": "~2.6.0",
         "ejs": "~2.5.5",
         "express": "~4.14.1",
