--- a/package.json
+++ b/package.json
@@ -1,28 +1,29 @@
 {
-    "name": "ases",
-    "version": "0.0.0",
-    "private": true,
-    "scripts": {
-        "start": "node ./bin/www"
-    },
-    "dependencies": {
-        "angular": "^1.6.4",
-        "angular-animate": "^1.6.4",
-        "angular-aria": "^1.6.4",
-        "angular-material": "^1.1.4",
-        "angular-ui-router": "^0.3.2",
-        "body-parser": "~1.16.0",
-        "cookie-parser": "~1.4.3",
-        "debug": "~2.6.0",
-        "ejs": "~2.5.5",
-        "express": "~4.14.1",
-        "express-jwt": "^5.1.0",
-        "jsonwebtoken": "^7.3.0",
-        "mongoose": "^4.9.1",
-        "mongoose-sequence": "^3.1.0",
-        "morgan": "~1.7.0",
-        "passport": "^0.3.2",
-        "passport-local": "^1.0.0",
-        "serve-favicon": "~2.3.2"
-    }
+  "name": "ases",
+  "version": "0.0.0",
+  "private": true,
+  "scripts": {
+    "start": "node ./bin/www"
+  },
+  "dependencies": {
+    "angular": "^1.6.4",
+    "angular-animate": "^1.6.4",
+    "angular-aria": "^1.6.4",
+    "angular-material": "^1.1.4",
+    "angular-ui-router": "^0.3.2",
+    "angularjs-toaster": "^2.1.0",
+    "body-parser": "~1.16.0",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.6.0",
+    "ejs": "~2.5.5",
+    "express": "~4.14.1",
+    "express-jwt": "^5.1.0",
+    "jsonwebtoken": "^7.3.0",
+    "mongoose": "^4.9.1",
+    "mongoose-sequence": "^3.1.0",
+    "morgan": "~1.7.0",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
+    "serve-favicon": "~2.3.2"
+  }
 }
